--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 relm4 = "0.10.0-beta.4"
 glib = { version = "0.21", features = ["v2_74"] }
+strsim = "0.11.1"
 [profile.release]
 opt-level = 3
 lto = true
