--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-relm4 = "0.10.0-beta.4"
+gtk = { version = "0.10.3", package = "gtk4", features = ["v4_12"] }
+relm4 = "0.10.1"
 glib = { version = "0.21", features = ["v2_74"] }
 strsim = "0.11.1"
+
 [profile.release]
 opt-level = 3
 lto = true
