--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ glib = { version = "0.21", features = ["v2_74"] }
 strsim = "0.11.1"
 deentry = "0.0.1"
 gtk4-layer-shell = "0.7.1"
+rayon = "1.11.0"
 
 [profile.release]
 opt-level = 3
